# CoolGame

./: CMakeLists.txt  Sergiu_notes  coolGame.Jenkinsfile  pipeline  verify_tests.py
dependencies/googletest/: CMakeCache.txt  Makefile  cmake_install.cmake
dependencies/googletest/mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake
docker/: Dockerfile  casc.yaml  credentials.xml  plugins.txt  secret.key
docker_node/: Dockerfile  coolGame_docker.Jenkinsfile
game/: CMakeLists.txt
game/src/: main.cpp
game/src/test/: CMakeLists.txt  test_GameObject.cpp
manage_jenkins/: create_creds.groovy  manage_jenkins.py  run_script_console.py  seed_config.xml
